# temperatureconverter-cpp

./: .gitignore  CMakeLists.txt  Jenkinsfile
.devcontainer/: devcontainer.json
features/: CMakeLists.txt  tempconv.feature
features/step_definitions/: tempconv_steps.cc
src/: CMakeLists.txt  tempconv.cc
test/: CMakeLists.txt  tempconv_test.cc
